--- a/sample/src/main/res/layout/activity_main.xml
+++ b/sample/src/main/res/layout/activity_main.xml
@@ -27,25 +27,54 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".MainActivity">
 
-    <com.andexert.library.RippleView
-        android:id="@+id/rect"
-        android:layout_width="200dp"
-        android:layout_height="50dp"
-        android:background="@android:color/holo_green_light">
+    <RelativeLayout
+        android:id="@+id/actionbar"
+        android:layout_width="match_parent"
+        android:layout_height="?android:actionBarSize"
+        android:background="@android:color/holo_blue_dark">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:text="@string/app_name"
+            android:layout_marginLeft="25dp"
+            android:textColor="@android:color/white"
+            android:textSize="18sp"/>
+
+        <com.andexert.library.RippleView
+            android:id="@+id/more"
+            android:layout_width="?android:actionBarSize"
+            android:layout_height="?android:actionBarSize"
+            android:layout_margin="5dp"
+            android:layout_alignParentRight="true"
+            ripple:rounded="true">
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="?android:actionBarSize"
+            android:src="@drawable/ic_profil_plus"
+            android:layout_centerInParent="true"/>
+        </com.andexert.library.RippleView>
+
+    </RelativeLayout>
+
+    <com.andexert.library.RippleView
+        android:id="@+id/rect"
+        android:layout_width="wrap_content"
+        android:layout_below="@+id/actionbar"
+        android:layout_marginTop="20dp"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:layout_width="200dp"
+            android:layout_height="50dp"
             android:layout_centerInParent="true"
             android:textColor="@android:color/white"
-            android:clickable="true"
-            android:text="Hello World!"/>
+            android:gravity="center"
+            android:text="Hello World!"
+            android:background="@android:color/holo_green_light"/>
 
     </com.andexert.library.RippleView>
 
