[FUNC] TA-DAH ! RippleEffect Done

--- a/sample/src/main/res/layout/activity_main.xml
+++ b/sample/src/main/res/layout/activity_main.xml
@@ -27,7 +27,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:background="@android:color/holo_blue_dark">
 
     <RelativeLayout
         android:id="@+id/actionbar"
@@ -52,10 +53,12 @@
             android:layout_margin="5dp"
             ripple:rounded="true">
         <ImageView
-            android:layout_width="wrap_content"
+            android:layout_width="?android:actionBarSize"
             android:layout_height="?android:actionBarSize"
             android:src="@drawable/ic_profil_plus"
-            android:layout_centerInParent="true"/>
+            android:layout_centerInParent="true"
+            android:padding="10dp"
+            android:background="@android:color/holo_blue_dark"/>
         </com.andexert.library.RippleView>
 
     </RelativeLayout>
@@ -81,10 +84,10 @@
 
     <com.andexert.library.RippleView
         android:id="@+id/circle"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:layout_below="@+id/rect"
+        android:layout_width="?android:actionBarSize"
+        android:layout_height="?android:actionBarSize"
         android:layout_marginLeft="30dp"
+        android:layout_centerInParent="true"
         android:layout_marginTop="20dp"
         ripple:rounded="true">
 
@@ -93,8 +96,8 @@
             android:layout_height="match_parent"
             android:layout_centerInParent="true"
             android:src="@drawable/ic_profil_plus"
-            android:padding="20dp"
-            android:background="@drawable/shape_example"/>
+            android:padding="15dp"
+            android:background="@android:color/holo_blue_dark"/>
 
     </com.andexert.library.RippleView>
 
