[FUNC] Change color

--- a/sample/src/main/res/layout/activity_main.xml
+++ b/sample/src/main/res/layout/activity_main.xml
@@ -51,7 +51,8 @@
             android:layout_height="?android:actionBarSize"
             android:layout_alignParentRight="true"
             android:layout_margin="5dp"
-            ripple:rounded="true">
+            ripple:rounded="true"
+            ripple:color="@android:color/holo_red_dark">
         <ImageView
             android:layout_width="?android:actionBarSize"
             android:layout_height="?android:actionBarSize"
