--- a/sample/src/main/res/layout/activity_main.xml
+++ b/sample/src/main/res/layout/activity_main.xml
@@ -51,7 +51,7 @@
             android:layout_height="?android:actionBarSize"
             android:layout_alignParentRight="true"
             android:layout_margin="5dp"
-            ripple:rounded="true"
+            ripple:rippleType="double"
             ripple:color="@android:color/holo_red_dark">
         <ImageView
             android:layout_width="?android:actionBarSize"
@@ -90,7 +90,7 @@
         android:layout_marginLeft="30dp"
         android:layout_centerInParent="true"
         android:layout_marginTop="20dp"
-        ripple:rounded="true">
+        ripple:rippleType="double">
 
         <ImageView
             android:layout_width="match_parent"
