--- a/sample/src/main/res/layout/activity_main.xml
+++ b/sample/src/main/res/layout/activity_main.xml
@@ -87,7 +87,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginLeft="30dp"
         android:layout_height="wrap_content"
-        ripple:rv_type="rectangle"
+        ripple:rv_type="reverse"
         ripple:rv_zoom="true">
 
         <TextView
