--- a/sample/src/main/res/layout/activity_main.xml
+++ b/sample/src/main/res/layout/activity_main.xml
@@ -91,6 +91,7 @@
         ripple:rv_zoom="true">
 
         <TextView
+            android:id="@+id/rect_child"
             android:layout_width="200dp"
             android:layout_height="50dp"
             android:layout_centerInParent="true"
